--- a/css/agency.css
+++ b/css/agency.css
@@ -265,7 +265,6 @@ header {
     text-align: center;
     color: #fff;
     background-attachment: scroll;
-    background-image: url(../img/header-bg.jpg);
     background-position: center center;
     background-repeat: none;
     -webkit-background-size: cover;
@@ -275,8 +274,10 @@ header {
 }
 
 header .intro-text {
-    padding-top: 100px;
+    /*
+	padding-top: 100px;
     padding-bottom: 50px;
+	*/
 }
 
 header .intro-text .intro-lead-in {
@@ -297,11 +298,10 @@ header .intro-text .intro-heading {
 }
 
 @media(min-width:768px) {
-    header .intro-text {
-        padding-top: 300px;
-        padding-bottom: 200px;
+	header .intro-text {
+        padding-top: 50px;
     }
-
+	
     header .intro-text .intro-lead-in {
         margin-bottom: 25px;
         font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
