--- a/css/agency.css
+++ b/css/agency.css
@@ -172,6 +172,7 @@ fieldset[disabled] .btn-xl.active {
 .navbar-default {
     border-color: transparent;
     background-color: #222;
+	box-shadow: 0 2px 3px rgba(0,0,0,0.24);
 }
 
 .navbar-default .navbar-brand {
