--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,18 @@ body {
 	height: 100%;
 }
 
+
 html {
 	width: 100%;
 	height: 100%;
 }
 
 #map {
-	padding: 100px 0;
+	padding: 150px 0;
 	background-color: #999999;
+	position: relative;
+	overflow: hidden;
+	-webkit-transform: translateZ(0px);
 }
 
 #map-canvas {
@@ -19,9 +23,9 @@ html {
 	padding: 0px;
 }
 
-@media(device-width:568px){
+@media(max-width:568px){
 	#map-canvas{
-		height:100px;
+		height:200px;
 	}
 }
 
@@ -45,7 +49,7 @@ header{
 }
 
 .services-section {
-	background: #fff;
+	background: #f8f8f8;
 }
 
 .contact-section {
@@ -71,22 +75,35 @@ header{
 	transition: background .3s ease-in-out;
 }
 
-	p.about-text{
+	p.subtitles{
 	font-size:20px;	
 }
 
-.our-mission{
+.service{
+	background-color: white;
+	display: block;
+	text-decoration: none;
+	float: left;
+	margin-right: 10px;
+	margin-bottom: 50px;
+}
+
+
+@media(max-width:568px){
+
+}
+
+.claim{
 	text-align: center;
-	margin-top: 20px;
-	background-color: #ddd;
-	border-radius: 5px;
+	margin: 30px;
+	border-radius: 5px;	
 }
 
 .text-left{
 	text-align: left;
 }
 
-.img-center img{
-	display: block;
-	margin = 0 auto;
+
+.img-container{
+	
 }
