--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,6 @@ header,
 
 header{
 	height: 100%;
-	margin-top: -60px;
 }
 
 .about-section {
@@ -77,17 +76,25 @@ header{
 
 	p.subtitles{
 	font-size:20px;	
+	color: #5f5f5f;
 }
 
 .service{
-	background-color: white;
 	display: block;
 	text-decoration: none;
 	float: left;
-	margin-right: 10px;
 	margin-bottom: 50px;
+	cursor: pointer;
 }
 
+.service a:hover{
+	text-decoration: none;
+}
+
+.compress{
+	padding: 0 20px;
+	background-color: white;
+}
 
 @media(max-width:568px){
 
@@ -103,6 +110,30 @@ header{
 	text-align: left;
 }
 
+.service-title {
+	color: #000;
+	font-size: 24px;
+	text-align: center;
+	padding-top: 30px;
+}
+
+.info p{
+	font-size: 16px;
+	color: #999;
+	text-align: center;
+	margin-top: 10px;
+}
+
+.hover {
+	position: absolute;
+	top: 0;
+	left: 0;
+	background-color: black;
+}
+
+.group-photo {
+	border: 5px solid; 
+}
 
 .img-container{
 	
