--- a/css/agency.css
+++ b/css/agency.css
@@ -171,7 +171,7 @@ fieldset[disabled] .btn-xl.active {
 /*navigation bar*/
 .navbar-default {
     border-color: transparent;
-    background-color: #b8b8b8;
+    background-color: #eeeeee;
 	box-shadow: 0 2px 3px rgba(0,0,0,0.24);
 }
 
@@ -197,8 +197,8 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .navbar-default .navbar-toggle {
-    border-color: blue;
-    background-color: blue;
+    border-color: #999999;
+    background-color: #999999;
 }
 
 .navbar-default .navbar-toggle .icon-bar {
@@ -349,7 +349,7 @@ h2.section-heading  {
 section h3.section-subheading {
     text-transform: none;
     font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-size: 14px;
+    font-size: 23px;
     font-style: italic;
     font-weight: 400;
 	color: #777777;
