add cool animation at What we do

--- a/css/style.css
+++ b/css/style.css
@@ -170,9 +170,12 @@ header{
 
 .hover {
 	position: absolute;
+	background-color: rgba(0,0,0,0.6);
+	display: none;
+	width: 100%;
+	height: 100%;:
 	top: 0;
 	left: 0;
-	background-color: black;
 }
 
 .group-photo {
@@ -224,4 +227,6 @@ img.certificate{
 }
 
 .img-container{
+	position: relative;
 }
+
