--- a/css/agency.css
+++ b/css/agency.css
@@ -69,12 +69,25 @@ h6 {
 
 /*botton*/
 .btn-primary {
-    border-color: blue;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
     color: #fff;
-    background-color: blue;
+	background-color: transparent;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-top: -31px;
+	margin-left: -133px;
+	width: 260px;
+	height: 56px;
+	line-height: 56px;
+	border: 3px solid #FFF;
+	-webkit-border-radius: 8px;
+	border-radius: 8px;
+	background-clip: padding-box;
+	color: #FFF;
+	text-align: center;
 }
 
 .btn-primary:hover,
@@ -82,15 +95,16 @@ h6 {
 .btn-primary:active,
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
-    border-color: #f6bf01;
     color: #fff;
-    background-color: #f6bf01;
+	background-color:transparent;
+    border-color: white;
 }
 
 .btn-primary:active,
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
     background-image: none;
+    border-color: white;
 }
 
 .btn-primary.disabled,
@@ -108,8 +122,7 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-    border-color: blue;
-    background-color: blue;
+    border-color: white;
 }
 
 .btn-primary .badge {
