--- a/css/style.css
+++ b/css/style.css
@@ -21,19 +21,15 @@ li.contact{
 	
 }
 
-#map {
-	padding: 150px 0;
-	background-color: #999999;
-	position: relative;
-	overflow: hidden;
-	-webkit-transform: translateZ(0px);
-}
-
 .toggle-map{
 }
 
 #map-container{
 	display: none;
+	background-color: transparent;
+	position: relative;
+	overflow: hidden;
+	-webkit-transform: translateZ(0px);
 }
 
 .phone-area{
@@ -80,7 +76,7 @@ header{
 
 .accr-section {
 	background: #fff;
-	padding: 10px;
+	padding: 10px auto;
 }
 
 .phone{
@@ -126,8 +122,7 @@ header{
 .service{
 	display: block;
 	text-decoration: none;
-	float: left;
-	margin-bottom: 50px;
+	margin-top: 50px;
 	cursor: pointer;
 }
 
@@ -219,6 +214,12 @@ textarea.has-error{
 p.phone-number{
 	color: white;
 	font-size: 40px;
+}
+@media(max-width:769px){
+	p.phone-number{
+		font-size: 30px;
+		color: white;
+	}
 }
 
 img.certificate{
