--- a/css/style.css
+++ b/css/style.css
@@ -235,8 +235,8 @@ img.certificate{
 }
 
 .service-nav{
-	font-size: 10px;
-	margin-top: 7px;
+	font-size: 13px;
+	margin-top: 9px;
 }
 
 .underline{
@@ -246,4 +246,16 @@ img.certificate{
 
 .resize>img{
 	margin:100px;
+}
+
+a.facebook-btn{
+	background-color: #3b5998;
+}
+
+a.googleplus-btn{
+	background-color: #dd4b39;
+}
+
+a.linkedin-btn{
+	background-color: #007bb6;
 }
