--- a/css/agency.css
+++ b/css/agency.css
@@ -322,6 +322,11 @@ header .intro-text .intro-heading {
     line-height: 50px;
 }
 
+.intro-text{
+	right: 0;
+	bottom: 0;
+}
+
 /*header screen resize*/
 @media(min-width:768px) {
 	header .intro-text {
@@ -336,6 +341,11 @@ header .intro-text .intro-heading {
         font-style: italic;
         line-height: 40px;
     }
+    
+    .intro-text{
+	right: 0;
+	bottom: 0;
+}
 
     header .intro-text .intro-heading {
         margin-bottom: 50px;
