--- a/css/agency.css
+++ b/css/agency.css
@@ -795,6 +795,7 @@ ul.social-buttons li a {
     line-height: 40px;
     outline: 0;
     color: #fff;
+    background-color: #222;
     -webkit-transition: all .3s;
     -moz-transition: all .3s;
     transition: all .3s;
@@ -803,7 +804,7 @@ ul.social-buttons li a {
 ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
-    background-color: black ;
+    background-color: blue;
 }
 
 /*btn*/
