--- a/css/agency.css
+++ b/css/agency.css
@@ -322,6 +322,11 @@ header .intro-text .intro-heading {
     line-height: 50px;
 }
 
+.intro-text{
+	right: 0;
+	bottom: 0;
+}
+
 /*header screen resize*/
 @media(min-width:768px) {
 	header .intro-text {
@@ -336,6 +341,11 @@ header .intro-text .intro-heading {
         font-style: italic;
         line-height: 40px;
     }
+    
+    .intro-text{
+	right: 0;
+	bottom: 0;
+}
 
     header .intro-text .intro-heading {
         margin-bottom: 50px;
@@ -785,7 +795,6 @@ ul.social-buttons li a {
     line-height: 40px;
     outline: 0;
     color: #fff;
-    background-color: #222;
     -webkit-transition: all .3s;
     -moz-transition: all .3s;
     transition: all .3s;
@@ -794,7 +803,7 @@ ul.social-buttons li a {
 ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
-    background-color: blue;
+    background-color: black ;
 }
 
 /*btn*/
