--- a/css/style.css
+++ b/css/style.css
@@ -215,6 +215,7 @@ textarea.has-error{
 }
 
 p.phone-number{
+	color: white;
 	font-size: 20px;
 	padding: 5px;
 }
@@ -235,8 +236,8 @@ img.certificate{
 }
 
 .service-nav{
-	font-size: 10px;
-	margin-top: 7px;
+	font-size: 13px;
+	margin-top: 9px;
 }
 
 .underline{
@@ -246,4 +247,24 @@ img.certificate{
 
 .resize>img{
 	margin:100px;
+}
+
+a.facebook-btn{
+	background-color: #3b5998;
+}
+
+a.googleplus-btn{
+	background-color: #dd4b39;
+}
+
+a.linkedin-btn{
+	background-color: #007bb6;
+}
+
+.nav-home{
+	font-size: 20px;
+}
+
+.nav-service{
+	font-size: 13px;
 }
