--- a/css/agency.css
+++ b/css/agency.css
@@ -305,6 +305,10 @@ header .intro-text {
     padding-bottom: 50px;
 }
 
+.intro-lead-in{
+	background-color: rgba(0, 0, 0, 0.3);
+}
+
 header .intro-text .intro-lead-in {
     margin-bottom: 25px;
     font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
